✨ feat(trans): add trans and valid
add translation and struct valid
